# neuralnet

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
include/: autoencoder.h  data.h  io.h  linalg.h  neuralnet.h  text.h  util.h
scripts/: cgen  compare.rb  compare_2.rb  compare_3.rb  compare_3_backup.rb  compare_4.rb  compare_5.rb  compare_6.rb  compare_7.rb  compare_8.rb  print_lines
src/: autoencoder.c  data.c  io.c  linalg.c  main.c  neuralnet.c  text.c  util.c
